2000-12-12  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/entry.n: Improved documentation of interplay between the
	  -state and -textvariable options.

2000-11-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/image.test (image-1.10): Improved this test, which
	  previously only worked if the command failed to delete the root
	  window, and caused *major* trouble otherwise...
	* generic/tkImage.c (EventuallyDeleteImage): Created this function
	  so that images that get deleted during the creation of an image
	  won't cause a nasty core dump.  Properly fixes bug #120819.

2000-11-28  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/image.n: 
	* generic/tkImage.c (Tk_ImageObjCmd): Backed out previous change.
	  Bug #120819 is back again in force.  Left the test in there
	  though.

2000-11-23  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/image.n: 
	* tests/image.test (image-1.10):
	* generic/tkImage.c (Tk_ImageObjCmd): Prohibited image names that
	  start with "." since they can cause some really obscure
	  crashes.  Fixes Bug #120819.

2000-11-21  Eric Melski  <ericm@ajubasolutions.com>

	Overall change:  Implemented TIP 5, which exports
	TkClassProcs/TkSetClassProcs as Tk_ClassProcs/Tk_SetClassProcs,
	adding a size field to Tk_ClassProcs to allow for future
	expansion, and renaming the geometryProc to worldChangedProc,
	which is more in keeping with the actual use of the callback.

	* unix/mkLinks: Added link for Tk_SetClassProcs.

	* doc/SetClassProcs.3: Documentation for
	Tk_ClassProcs/Tk_SetClassProcs.

	* generic/tkCanvas.c:
	* generic/tkEntry.c:
	* generic/tkFrame.c:
	* generic/tkListbox.c:
	* generic/tkMenu.c:
	* generic/tkMessage.c:
	* generic/tkScale.c:
	* generic/tkText.c: Updated to use Tk_ClassProcs/Tk_SetClassProcs
	instead of TkClassProcs/TkSetClassProcs.

	* generic/tkMenubutton.c:
	* generic/tkScrollbar.c:
	* generic/tkButton.c: Updated to use Tk_SetClassProcs instead of
	TkSetClassProcs.

	* generic/tkMenubutton.h: